--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,27 +1,37 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master ] # Run the script on each commit
+    branches: [main, master] # run the scripts on each commit
   pull_request:
-    branches: [ main, master ] # Run the script on pull request for the branch
+    branches: [main, master] # run the scripts on pull request
+  repository_dispatch:  
+    types: [trigger-workflow] # can be used for triggering workflow in other directories
 jobs:
   test:
     timeout-minutes: 60
-    runs-on: ubuntu-latest # the runner name for the job to tun
+    runs-on: [ubuntu-latest] # runner name were the script should run
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          ref: ${{ github.event.client_payload.sha }}
+      - name: Install dependencies
+        run: npm install
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run GUI Automation tests
+        run: npm test
+        env:
+          USERNAME: ${{ secrets.USERNAME }}       #username can be stored in github secrets
+          PASSWORD: ${{ secrets.PASSWORD }}       #password can be stored in github secrets
+          URL: ${{ secrets.API_URL }}         #URL can be stored in github secrets
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: ./test-results/  #store the test results as archive
+          retention-days: 30
+   
+
+      
