--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "allure-playwright": "^2.5.0",
     "dotenv": "^16.4.5",
     "prettier": "^3.0.3",
-    "ts-node": "^10.9.1"
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.5.4"
   }
 }
